--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open Sans"
+      rel="stylesheet"
+    />
+
     <title>New Tab</title>
   </head>
 
